k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rajeshapp
  labels:
    app.kubernetes.io/name: rajeshapp
    app.kubernetes.io/part-of: rajeshapp
